# DX12-Renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  renderer_lib.cpp
src/app/: CMakeLists.txt  main.cpp
